[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/minigames/signal_minigame.gd" id="1"]
[ext_resource type="Script" path="res://scenes/minigames/wave_display.gd" id="2"]

[node name="SignalMinigame" type="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="InstructionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 5.0
offset_bottom = 25.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
horizontal_alignment = 1
text = "[ SCROLL WHEEL to match the wave amplitude ]"

[node name="MatchLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 28.0
offset_bottom = 48.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0.8, 0, 1)
horizontal_alignment = 1
text = "MATCH: 0%"

[node name="WaveDisplay" type="Control" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.35
anchor_right = 0.98
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")
